--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,8 +5,9 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 106%;
-    margin: 245px auto 0;
+    margin-bottom: 0;
     border: 2px solid red;
     text-align: center;
     position: relative;
+    z-index: 1;
 }
