--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,8 +1,35 @@
-.cover{
+.cover {
     width: 92.5%;
     color: #FFFFFF;
     margin: 92px auto;
     border: 2px solid red;
     background-image: url(../../images/cover-trains.jpg);
     background-size: cover;
+    background-position: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.cover:before {
+    content:'';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #2A2C2F;
+    opacity: 0.3;
+    transition: opacity .1s linear;
+}
+
+.cover:hover:before {
+    opacity: 0.8;
+    
+}
+
+.cover:hover {
+    cursor: pointer;
 }
