--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,6 @@
 .lead__image{
     width: 100%;
+    height: 615px;
+    background-image: url(../../../images/__image-polka.png);
+    background-size: cover;
 }
