--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,13 @@
 .footer{
-    width: 92.5%;
     display: flex;
     justify-content: space-between;
     border: 2px solid red;
     margin: 0 auto;
+}
+
+@media all and (max-width: 320px){
+    .footer{
+        display: flex;
+        flex-direction: column;
+    }
 }
