--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -4,3 +4,9 @@
     background-image: url(../../../images/__image-polka.png);
     background-size: cover;
 }
+
+@media all and (max-width: 320px){
+    .lead__image{
+        height: 200px;
+    }
+}
