--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,12 @@
 .places{
-    width: 76.9%;
+    max-width: 83.1%;
     margin: 0 auto;
     color: #FFFFFF;
     border: 2px solid red;
+}
+
+@media all and (max-width: 1024px){
+    .places{
+        max-width: 100%;
+    }
 }
