--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,5 @@
 .cover__subtitle{
-    width: 30.4%;
+    max-width: 30.4%;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -10,4 +10,16 @@
     text-align: center;
     position: relative;
     z-index: 1;
+}
+
+@media all and (max-width: 1024px){
+    .cover__subtitle{
+        max-width: 360px;
+    }
+}
+@media all and (max-width: 320px){
+    .cover__subtitle{
+    font-size: 14px;
+    line-height: 1.14;
+    }
 }
