--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,6 +3,6 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 114%;
+    line-height: 1.14;
     color: #FFFFFF;
 }
