--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,12 @@
 .header{
-    width: 92.5%;
-    height: 52px;
-    padding-top: 28px;
     margin: 0 auto 56px;
     border: 2px solid red;
     display: flex;
     justify-content: space-between;
+}
+
+@media all and (max-width: 320px){
+    .header{
+        margin: 0 auto 48px;
+    }
 }
