--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -3,6 +3,14 @@
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
-    line-height: 107%;
+    line-height: 1.07;
     margin-bottom: 40px;
+    margin-top: 0;
+}
+
+@media all and (max-width: 320px){
+    .intro__title{
+        font-size: 32px;
+        line-height: 1.09;
+    }
 }
