--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,7 +3,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
-    line-height: 140%;
+    line-height: 1.4;
     letter-spacing: 0.15em;
     text-transform: uppercase;
     margin: 8px 0 0;
