--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,22 @@
 .lead__subtitle{
-    width: 65%;
+    max-width: 65%;
     margin: 0 auto 64px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 30px;
-    line-height: 120%;
+    line-height: 1.2;
     text-align: center;
+}
+
+@media all and (max-width: 320px){
+    .lead__subtitle{
+        max-width: 100%;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 1.25;
+        margin-bottom: 40px;
+    }
 }
