--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,7 +5,25 @@
     font-style: normal;
     font-weight: 900;
     font-size: 96px;
-    line-height: 104%;
+    line-height: 1.1;
     margin: 0 auto 32px;
     border: 2px solid red;
+}
+
+@media all and (min-width: 768px){
+    .lead__title{
+        width: 100%;
+    }
+}
+@media all and (max-width: 320px){
+    .lead__title{
+        width: 100%;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: 900;
+        font-size: 40px;
+        line-height: 1.1;
+        text-align: center;
+        margin-bottom: 16px;
+    }
 }
