--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,22 @@
 .lead{
-    width: 76.9%;
+    max-width: 984px;
     margin: 0 auto 92px;
     color: #FFFFFF;
     border: 2px solid red;
+}
+
+@media all and (max-width: 768px){
+    .lead{
+        margin-left: -24px;
+        margin-right: -24px;
+    }
+}
+
+@media all and (max-width: 320px){
+    .lead{
+        max-width: 320px;
+        margin-bottom: 64px;
+        margin-left: -16px;
+        margin-right: -16px;
+    }
 }
