--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,4 +2,19 @@
     max-width: 1280px;
     background:#2A2C2F;
     margin: auto;
+    padding: 28px 48px 24px;
+    text-rendering: optimizeLegibility;
+
+}
+
+@media all and (max-width: 768px){
+    .page{
+        padding: 28px 24px;
+    }
+}
+
+@media all and (max-width: 320px){
+    .page{
+        padding: 16px 16px 24px;
+    }
 }
