--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -10,3 +10,14 @@
     margin-top: 92px;
     align-self: end;
 }
+
+@media all and (max-width: 320px){
+    .place__title{
+        font-family: Inter;
+        font-style: normal;
+        font-weight: 900;
+        font-size: 32px;
+        line-height: 1.09;
+        margin-top: 64px;
+    }
+}
