--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,3 +3,9 @@
     border: 1px solid red;
     align-self: end;
 }
+
+@media all and (max-width: 320px){
+    .place__website{
+        display: none;
+    }
+}
