--- a/blocks/place/__website/place__website_url-heading.css
+++ b/blocks/place/__website/place__website_url-heading.css
@@ -3,7 +3,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
-    line-height: 100%;
+    line-height: 1;
     letter-spacing: 0.2em;
     color: #AAAAAA;
 }
