--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -7,5 +7,6 @@
 @media all and (max-width: 320px){
     .footer__links{
         flex-direction: column;
+        justify-content: space-between;
     }
 }
