--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -36,20 +36,21 @@
 @media all and (max-width: 1024px){
     .cover{
         min-height: 640px;
-        margin: 92px -48px;
+        width: 100%;
+        margin: 92px 0;
     }
 }
 
 @media all and (max-width: 768px){
     .cover{
         min-height: 480px;
-        margin: 92px -48px;
+        margin: 90px 0;
     }
 }
 
 @media all and (max-width: 320px){
     .cover{
         min-height: 200px;
-        margin: 66px -16px 64px;
+        margin: 40px 0 64px;
     }
 }
