--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,8 +1,17 @@
 .footer__copyright{
-    font-family: Inter;
+    margin: 0;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 1.14;
     color: #FFFFFF;
+    align-self: center;
+}
+
+@media all and (max-width: 320px){
+    .footer__copyright{
+        align-self: flex-start;
+        line-height: 1;
+    }
 }
