--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,9 +1,16 @@
 .footer__link{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 112%;
     margin-right: 18px;
+    text-decoration: none;
 }
 
+@media all and (max-width: 320px){
+    .footer__link{
+        font-size: 24px;
+        line-height: 1;
+    }
+}
