--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,10 +1,10 @@
 .header__lang-link{
     color: #FFFFFF;
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    line-height: 28px;
+    line-height: 1.17;
     margin-right: 18px;
 }
 
@@ -15,12 +15,7 @@
 
 @media all and (max-width: 320px){
     .header__lang-link{
-        font-family: Inter;
-        font-style: normal;
-        font-weight: normal;
         font-size: 18px;
         line-height: 1.11;
-        text-align: right;
-        text-decoration-line: underline;
     }
 }
