--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,10 +2,24 @@
     margin: 0 auto 56px;
     display: flex;
     justify-content: space-between;
+    max-width: 1184px;
+}
+
+@media all and (max-width: 1024px){
+    .header{
+        max-width: 928px;
+    }
+}
+
+@media all and (max-width: 768px){
+    .header{
+        max-width: 720px;
+    }
 }
 
 @media all and (max-width: 320px){
     .header{
+        max-width: 288px;
         margin: 0 auto 48px;
     }
 }
