--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,7 +1,10 @@
 .intro__list{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
-    line-height: 150%;
+    line-height: 1.5;
+    list-style-type: none;
+    margin: 33px 0 0;
+    padding-left: 0;
 }
