--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,18 +1,24 @@
 .intro{
-    max-width: 690px;
+    max-width: 984px;
+    margin: 0 auto;
     color: #FFFFFF;
-    padding-left: 100px;
     margin-bottom: 92px;
 }
 
 @media all and (max-width: 1024px){
     .intro{
-        padding-left: 0;
+        max-width: 928px;
     }
 }
 
 @media all and (max-width: 768px){
     .intro{
-        max-width: 100%;
+        max-width: 720px;
+    }
+}
+
+@media all and (max-width: 320px){
+    .intro{
+        max-width: 288px;
     }
 }
