--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,8 +1,18 @@
 .lead__image{
     width: 100%;
     height: 615px;
-    background-image: url(../../../images/__image-polka.png);
-    background-size: cover;
+}
+
+@media all and (max-width: 1024px){
+    .lead__image{
+        height: 580px;
+    }
+}
+
+@media all and (max-width: 768px){
+    .lead__image{
+        height: 480px;
+    }
 }
 
 @media all and (max-width: 320px){
