--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,7 @@
 .lead__subtitle{
-    max-width: 65%;
+    max-width: 640px;
     margin: 0 auto 64px;
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 30px;
@@ -9,12 +9,15 @@
     text-align: center;
 }
 
+@media all and (max-width: 1024px){
+    .lead__subtitle{
+        margin-bottom: 56px;
+    }
+}
+
 @media all and (max-width: 320px){
     .lead__subtitle{
-        max-width: 100%;
-        font-family: Inter;
-        font-style: normal;
-        font-weight: normal;
+        max-width: 288px;
         font-size: 16px;
         line-height: 1.25;
         margin-bottom: 40px;
