--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,28 +1,25 @@
 .lead__title{
-    width: 73.2%;
+    max-width: 720px;
     text-align: center;
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 96px;
-    line-height: 1.1;
+    line-height: 1.04;
     margin: 0 auto 32px;
 }
 
-@media all and (min-width: 768px){
+@media all and (max-width: 600px){
     .lead__title{
         width: 100%;
     }
 }
+
 @media all and (max-width: 320px){
     .lead__title{
         width: 100%;
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 900;
         font-size: 40px;
         line-height: 1.1;
-        text-align: center;
         margin-bottom: 16px;
     }
 }
