--- a/blocks/link/link.css
+++ b/blocks/link/link.css
@@ -1,5 +1,9 @@
-.link{
+.link {
     color: #FFFFFF;
-    text-decoration: none;
     cursor: pointer;
+    transition: opacity .1s linear;
+}
+
+.link:hover {
+    opacity: 0.8;
 }
