--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,20 +1,15 @@
 .page{
     max-width: 1280px;
+    min-width: 320px;
     background:#2A2C2F;
-    margin: auto;
-    padding: 28px 48px 24px;
     text-rendering: optimizeLegibility;
-
-}
-
-@media all and (max-width: 768px){
-    .page{
-        padding: 28px 24px;
-    }
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding-top: 28px;
 }
 
 @media all and (max-width: 320px){
     .page{
-        padding: 16px 16px 24px;
+        padding-top: 16px;
     }
 }
