--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,3 +4,21 @@
     gap: 16px;
     margin: 0 auto;
 }
+
+@media all and (max-width: 1024px){
+    .photo-grid{
+        max-width: 928px;
+    }
+}
+
+@media all and (max-width: 768px){
+    .photo-grid{
+        max-width: 720px;
+    }
+}
+
+@media all and (max-width: 320px){
+    .photo-grid{
+        max-width: 288px;
+    }
+}
