--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,8 +1,8 @@
 .place__link{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 122%;
+    line-height: 1.22;
     color: #FFFFFF;
 }
