--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,9 +1,22 @@
 .place__paragraph{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 163%;
+    line-height: 1.63;
     grid-area: paragraph;
     margin: 0;
+}
+
+@media all and (max-width: 768px){
+    .place__paragraph{
+        font-size: 16px;
+    }
+}
+
+@media all and (max-width: 320px){
+    .place__paragraph{
+        max-width: 288px;
+        padding-left: 16px;
+    }
 }
