--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,22 +1,29 @@
 .place__title{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 106%;
     grid-area: title;
-    margin-bottom: 0;
-    margin-top: 92px;
+    margin: 0;
     align-self: end;
+}
+
+@media all and (max-width: 768px){
+    .place__title{
+        max-width: 340px;
+        font-size: 42px;
+        line-height: 1.1;
+        margin-top: 64px;
+    }
 }
 
 @media all and (max-width: 320px){
     .place__title{
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 900;
         font-size: 32px;
         line-height: 1.09;
         margin-top: 64px;
+        max-width: 288px;
+        margin: 64px auto 0;
     }
 }
