--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,4 +1,5 @@
 .place__url-heading{
+    margin: 0;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -6,4 +7,5 @@
     line-height: 1;
     letter-spacing: 0.2em;
     color: #AAAAAA;
+    text-transform: uppercase;
 }
