--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,10 +2,25 @@
     max-width: 83.1%;
     margin: 0 auto;
     color: #FFFFFF;
+    margin-top: 92px;
 }
 
 @media all and (max-width: 1024px){
     .places{
+        max-width: 928px;
+    }
+}
+
+@media all and (max-width: 768px){
+    .places{
+        max-width: 720px;
+        margin-top: 88px;
+    }
+}
+
+@media all and (max-width: 320px){
+    .places{
         max-width: 100%;
+        margin-top: 0;
     }
 }
