--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,5 +1,6 @@
 .footer__links{
     display: flex;
+    margin: 0;
     list-style-type: none;
     padding-left: 0;
     
@@ -8,9 +9,7 @@
 @media all and (max-width: 320px){
     .footer__links{
         flex-direction: column;
-        justify-content: space-between;
         margin-bottom: 48px;
         margin-top: 0;
-        height: 250px;
     }
 }
