--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,7 +1,10 @@
 .place__text{
     margin: 0;
+    padding-bottom: 26px;
 }
 
-.place__text:first-child{
-padding-bottom: 26px;
+@media all and (max-width: 768px){
+    .place__text{
+        padding-bottom: 25px;
+    }
 }
