--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -22,8 +22,7 @@
     .place__title{
         font-size: 32px;
         line-height: 1.09;
-        margin-top: 64px;
         max-width: 288px;
-        margin: 64px auto 0;
+        margin: 64px 0 0 16px;
     }
 }
