--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     max-width: 1184px;
+    border: 1px solid purple;
 }
 
 @media all and (max-width: 1024px){
@@ -17,7 +18,7 @@
     }
 }
 
-@media all and (max-width: 320px){
+@media all and (max-width: 340px){
     .header{
         max-width: 288px;
         margin: 0 auto 48px;
