--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,5 @@
 .lead__title{
-    max-width: 720px;
+    width: 720px;
     text-align: center;
     font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
@@ -7,19 +7,26 @@
     font-size: 96px;
     line-height: 1.04;
     margin: 0 auto 32px;
+    box-sizing: border-box;
 }
 
-@media all and (max-width: 600px){
+@media all and (max-width: 768px){
     .lead__title{
         width: 100%;
     }
 }
 
-@media all and (max-width: 320px){
+@media all and (max-width: 700px){
     .lead__title{
-        width: 100%;
+        width: 60%;
         font-size: 40px;
         line-height: 1.1;
         margin-bottom: 16px;
+    }
+}
+
+@media all and (max-width: 495px){
+    .lead__title{
+        width: 100%;
     }
 }
