--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,8 +1,5 @@
 .cover__subtitle{
     max-width: 30.4%;
-    font-family: Inter, Arial, Helvetica, sans-serif;
-    font-style: normal;
-    font-weight: normal;
     font-size: 18px;
     line-height: 122%;
     margin-top: 32px;
@@ -12,13 +9,14 @@
     z-index: 1;
 }
 
-@media all and (max-width: 1024px){
+@media all and (max-width: 1150px){
     .cover__subtitle{
         max-width: 360px;
     }
 }
 @media all and (max-width: 550px){
     .cover__subtitle{
+        max-width: 288px;
         font-size: 14px;
         line-height: 1.14;
         margin-top: 16px;
